@@ -2,6 +2,4 @@
 
 require('../dist')
 
-const { Block, Docinfo, Extensions } = Opal.Asciidoctor.Tabs
-
-module.exports = Object.assign(Extensions, { Block, Docinfo })
+module.exports = Opal.Asciidoctor.Tabs.Extensions
